packages/cashc/test/compiler/ParseError/bytes0.cash
contract Test() {
    return {
        hello() {
            bytes0 byte = bytes0(10);
            require(int(byte) == 10);
        }
    }
}
